--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
     <script type="text/javascript" src="vendors/jquery/jquery-2.0.0.js"></script>
     <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="vendors/backbone/backbone.js"></script>
+    <script type="text/javascript" src="js/models/AppModel.js"></script>
     <script type="text/javascript" src="js/views/AppView.js"></script>
     <script type="text/javascript" src="js/App.js"></script>
   </body>
