--- a/app/index.html
+++ b/app/index.html
@@ -39,12 +39,12 @@
     
     <script type="text/html" id="template_pomodoro">
       <div id="pomodoro-header" class="row-fluid">
-        <div id="pomodoro-id" class="span3">Pomodoro : 2</div>
-        <div id="pomodoro-timeremaining" class="span3 offset6">22:45</div>
+        <div id="pomodoro-id" class="span3">Pomodoro : <%- pomodoro_current_id %></div>
+        <div id="pomodoro-timeremaining" class="span3 offset6"><%- pomodoro_time_remaining %></div>
       </div>
       <div id="pomodoro-working-area" class="row-fluid">
         <div class="progress pomodoro-working-progressbar">
-          <div class="bar" style="width: 60%;"></div>
+          <div class="bar" style="width: <%- working_progressbar %>%;"></div>
         </div>
       </div>
       <div id="pomodoro-pause-area" class="row-fluid">
@@ -71,6 +71,7 @@
     <script type="text/javascript" src="vendors/jquery/jquery-2.0.0.js"></script>
     <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="vendors/backbone/backbone.js"></script>
+    <script type="text/javascript" src="vendors/backbone/backbone.localStorage.js"></script>
     <script type="text/javascript" src="js/models/AppModel.js"></script>
     <script type="text/javascript" src="js/views/AppView.js"></script>
     <script type="text/javascript" src="js/App.js"></script>
