* The user can do a complete pomodoro session (3 work session of 25 minutes with short break of 5 minutes between them, 1 work session of 25 minutes with long break of 20 minutes) * I have added a basic manifest for chrome extension
[All code]
  [Refactor] Replace all reference to the word pause to break
  [Refactor] Replace all reference to the word start to play

[App]
  Declare constant for SHORT_BREAK, LONG_BREAK, WORK, POMODORO_BY_LONG_BREAK
[AppModel]
  [Refactor] Rename the method working_progressbar in workingProgress
  [Refactor] Rename the method pause_progressbar in pauseProgress
  [Refactor] Rename the method pomodoroTimeRemaining in timeRemaining
  Implement isTimeEllapsed
  Implement shiftNextStep

--- a/app/index.html
+++ b/app/index.html
@@ -40,16 +40,16 @@
     <script type="text/html" id="template_pomodoro">
       <div id="pomodoro-header" class="row-fluid">
         <div id="pomodoro-id" class="span3">Pomodoro : <%- pomodoro_current_id %></div>
-        <div id="pomodoro-timeremaining" class="span3 offset6"><%- pomodoro_time_remaining %></div>
+        <div id="pomodoro-timeremaining" class="span3 offset6"><%- timeRemaining %></div>
       </div>
       <div id="pomodoro-working-area" class="row-fluid">
         <div class="progress pomodoro-working-progressbar">
-          <div class="bar" style="width: <%- working_progressbar %>%;"></div>
+          <div class="bar" style="width: <%- workingProgress %>%;"></div>
         </div>
       </div>
-      <div id="pomodoro-pause-area" class="row-fluid">
-        <div class="progress pomodoro-pause-progressbar">
-          <div class="bar" style="width: 0%;"></div>
+      <div id="pomodoro-break-area" class="row-fluid">
+        <div class="progress pomodoro-break-progressbar">
+          <div class="bar" style="width: <%- breakProgress %>%;"></div>
         </div>
       </div>
       <div class="row-fluid">
@@ -57,7 +57,7 @@
           <img data-src="holder.js/32x32" alt="logo" id="pomodoro-play" />
         </div>
         <div class="span1">
-          <img data-src="holder.js/32x32" alt="logo" id="pomodoro-pause" />
+          <img data-src="holder.js/32x32" alt="logo" id="pomodoro-break" />
         </div>
         <div class="span1">
           <img data-src="holder.js/32x32" alt="logo" id="pomodoro-stop" />
